feat: add support for paper waivers

--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -29,3 +29,8 @@ jobs:
         SMARTWAIVER_API_KEY: ${{ secrets.SMARTWAIVER_API_KEY }}
         SCMA_FTP_USERNAME: ${{ secrets.SCMA_FTP_USERNAME }}
         SCMA_FTP_PASSWORD: ${{ secrets.SCMA_FTP_PASSWORD }}
+        SCMA_PAPER_WAIVERS_SHEET_ID: ${{ secrets.SCMA_PAPER_WAIVERS_SHEET_ID }}
+        GOOGLE_ACCOUNT_TYPE: ${{ secrets.GOOGLE_ACCOUNT_TYPE }}
+        GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+        GOOGLE_CLIENT_EMAIL: ${{ secrets.GOOGLE_CLIENT_EMAIL }}
+        GOOGLE_PRIVATE_KEY: ${{ secrets.GOOGLE_PRIVATE_KEY }}
